style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

* {
  box-sizing: border-box;
}

body {
  background-color: rgba(171, 230, 82, 0.699);
  font-family: Poppins, sans-serif;
  margin: 0;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 20px;
}

header span {
  margin-top: 25px;
}

.search {
  background-color: rgb(245, 248, 240);
  border: 2px;
  border-radius: 3px;
  font-family: inherit;
  font-size: 1rem;
  padding: 0.5rem 1rem;
  color: gray;
  width: 300px;
}

.search:focus {
  outline: none;
}

main {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  /* width: 500px; */
}

@media (max-width: 500px) {
  /* .container {
     width: 100vw; 
  } */
}

/* Changing size with flex property looks neater but the cards won't wrap on smaller screens, so used width prop instead */
.recipe-card {
  display: flex;
  flex-direction: column;
  /* flex-wrap: nowrap; */
  width: 400px;
  transition: width 0.3s ease;
  /* height: auto; */
  /* word-break: break-all; */
  text-align: justify;
  margin: 20px;
  cursor: pointer;
  /* transition: flex 0.7s ease-in; */
  background-color: #f1c572b0;
  border: 1px solid coral;
  border-radius: 5px;
}

.recipe-card img {
  width: 100%;
  /* height: 320px; */
  max-height: 100%;
  object-fit: cover;
}

.recipe-title {
  text-align: center;
  font-weight: bold;
  font-size: 15px;
  padding: 5px 10px;
  margin: 5px 0;
  letter-spacing: 1.8px;
}

.recipe-text {
  display: none;
  margin: 0;
  padding: 0;
}

.recipe-card.active {
  width: 500px;
  /* height: auto; */
  cursor: auto;
  /* overflow-y: scroll; */
}

.recipe-card.active .recipe-text {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: center;
  padding: 0 15px;
  /* max-height: 700px; */
  overflow-y: scroll;
}

.recipe-text::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: #f5f5f5;
}

.recipe-text::-webkit-scrollbar {
  width: 8px;
  background-color: #f5f5f5;
}

.recipe-text::-webkit-scrollbar-thumb {
  background-color: rgba(255, 127, 80, 0.596);
}

.recipe-info,
.ingredients,
.recipe-instructions {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 10px 0;
}

.recipe-info p {
  margin: 5px;
  font-size: 14px;
}

i {
  padding-right: 7px;
}

.ingredients h4,
.ingredients p,
.recipe-instructions h4,
.recipe-instructions p {
  margin: 2px;
}

.ingredients p,
.recipe-instructions p,
.recipe-instructions ol li {
  font-size: 15px;
}

